--- a/.github/workflows/build-and-push-main.yml
+++ b/.github/workflows/build-and-push-main.yml
@@ -47,6 +47,14 @@ jobs:
         run: |
           docker build -t ${{ vars.AZURE_REGISTRY_URL }}/hello/hello-py:${{ env.SHORT_SHA }} .
 
+      - name: Test Docker image
+        run: |
+          docker run --rm -d --name hello-py-test -p 5000:5000 ${{ vars.AZURE_REGISTRY_URL }}/hello/hello-py:${{ env.SHORT_SHA }}
+          sleep 10  # Wait a few seconds for the container to start
+          docker logs hello-py-test
+          curl -f http://localhost:5000/ || exit 1  # Check if the app is running
+          docker stop hello-py-test
+
       - name: Push Docker image to ACR - SHORT SHA
         run: |
           docker push ${{ vars.AZURE_REGISTRY_URL }}/hello/hello-py:${{ env.SHORT_SHA }}  
