--- a/k8s/hello-py/templates/service.yaml
+++ b/k8s/hello-py/templates/service.yaml
@@ -7,7 +7,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: 5000
       protocol: TCP
       name: http
   selector:
