--- a/.github/workflows/build-and-push-main.yml
+++ b/.github/workflows/build-and-push-main.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
       - main
-      - code-workflow
+      - python-errors
 
 jobs:
   build-test-and-push-main:
@@ -64,3 +64,7 @@ jobs:
         run: |
           docker tag ${{ vars.AZURE_REGISTRY_URL }}/hello/hello-py:${{ env.SHORT_SHA }} ${{ vars.AZURE_REGISTRY_URL }}/hello/hello-py:latest
           docker push ${{ vars.AZURE_REGISTRY_URL }}/hello/hello-py:latest
+
+  deploy-hello-pu-to-aks:
+    needs: deploy-to-aks
+    uses: ./.github/workflows/build-and-push-main.yml
