--- a/.github/workflows/deploy-to-aks.yml
+++ b/.github/workflows/deploy-to-aks.yml
@@ -2,9 +2,15 @@ name: Deploy to AKS
 
 on:
   workflow_dispatch:
+  workflow_call:
+  workflow_run:
+    workflows: [ "Build Test and Push image on merge to main" ]  # The name of the primary workflow
+    types:
+      - completed
   push:
     branches:
       - main
+
 
 jobs:
   deploy-to-aks:
