--- a/.github/workflows/build-and-push-main.yml
+++ b/.github/workflows/build-and-push-main.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
       - main
-      - python-errors
+      - argo-cd-sync-policy
 
 jobs:
   build-test-and-push-main:
@@ -65,6 +65,6 @@ jobs:
           docker tag ${{ vars.AZURE_REGISTRY_URL }}/hello/hello-py:${{ env.SHORT_SHA }} ${{ vars.AZURE_REGISTRY_URL }}/hello/hello-py:latest
           docker push ${{ vars.AZURE_REGISTRY_URL }}/hello/hello-py:latest
 
-#  deploy-hello-pu-to-aks:
-#    needs: build-test-and-push-main
-#    uses: ./.github/workflows/deploy-to-aks.yml
+  update-helm-revision:
+    needs: build-test-and-push-main
+    uses: ./.github/workflows/update-helm-revision.yml
