--- a/.github/workflows/deploy-to-aks.yml
+++ b/.github/workflows/deploy-to-aks.yml
@@ -3,10 +3,10 @@ name: Deploy to AKS
 on:
   workflow_dispatch:
   workflow_call:
-  workflow_run:
-    workflows: [ "Build Test and Push image on merge to main" ]  # The name of the primary workflow
-    types:
-      - completed
+#  workflow_run:
+#    workflows: [ "Build Test and Push image on merge to main" ]  # The name of the primary workflow
+#    types:
+#      - completed
 
 
 jobs:
