--- a/k8s/hello-py/templates/deployment.yaml
+++ b/k8s/hello-py/templates/deployment.yaml
@@ -11,6 +11,8 @@ spec:
       app.kubernetes.io/instance: hello-py
   template:
     metadata:
+      annotations:
+        helm.sh/revision: "{{ .Release.Revision }}"
       labels:
         app.kubernetes.io/name: hello-py
         app.kubernetes.io/instance: hello-py
