--- a/.github/workflows/update-helm-revision.yml
+++ b/.github/workflows/update-helm-revision.yml
@@ -2,6 +2,7 @@ name: Update Helm Revision in Git
 
 on:
   workflow_dispatch:
+  workflow_call:
 
 jobs:
   update-helm-revision:
@@ -21,20 +22,20 @@ jobs:
           echo "Hello, World!"
           echo "SHORT_SHA=${SHORT_SHA}"
 
-#      - name: Update the Helm revision in the helm values file
-#        run: |
-#          echo "Updating the Helm revision in the helm values file..."
-#          sed -i "s/helm.sh\/revision: \".*\"/helm.sh\/revision: \"${{ env.SHORT_SHA }}\"/g" k8s/hello-java/templates/deployment.yaml
-#          cat k8s/hello-java/templates/deployment.yaml
-#
-#      - name: Commit the changes to the Helm revision
-#        run: |
-#          echo "Committing the changes to the Helm revision..."
-#          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-#          git config --global user.name "github-actions[bot]"
-#          git add k8s/hello-java/templates/deployment.yaml
-#          git commit -m "Update Helm revision to ${{ env.SHORT_SHA }}"
-#          git push
+      - name: Update the Helm revision in the helm values file
+        run: |
+          echo "Updating the Helm revision in the helm values file..."
+          sed -i "s/helm.sh\/revision: \".*\"/helm.sh\/revision: \"${{ env.SHORT_SHA }}\"/g" k8s/hello-java/templates/deployment.yaml
+          cat k8s/hello-java/templates/deployment.yaml
+
+      - name: Commit the changes to the Helm revision
+        run: |
+          echo "Committing the changes to the Helm revision..."
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git add k8s/hello-java/templates/deployment.yaml
+          git commit -m "Update Helm revision to ${{ env.SHORT_SHA }}"
+          git push
 
 
 
