--- a/.github/workflows/update-helm-revision.yml
+++ b/.github/workflows/update-helm-revision.yml
@@ -51,8 +51,8 @@ jobs:
           cd k8s/hello-py/templates
           pwd
           echo "Updating the Helm revision in the helm values file..."
-          sed -i "s/helm.sh\/revision: \".*\"/helm.sh\/revision: \"${{ env.SHORT_SHA }}\"/g" deployments.yaml
-          cat deployments.yaml
+          sed -i "s/helm.sh\/revision: \".*\"/helm.sh\/revision: \"${{ env.SHORT_SHA }}\"/g" deployment.yaml
+          cat deployment.yaml
 
       - name: Commit the changes to the Helm revision
         run: |
@@ -62,6 +62,6 @@ jobs:
           echo "Committing the changes to the Helm revision..."
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
-          git add deployments.yaml
+          git add deployment.yaml
           git commit -m "Update Helm revision to ${{ env.SHORT_SHA }}"
           git push
