--- a/k8s/hello-py/templates/deployment.yaml
+++ b/k8s/hello-py/templates/deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: hello
 spec:
   replicas: {{ .Values.replicaCount }}
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels:
       app.kubernetes.io/name: hello-py
